# rust-sdks

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: webrtc-builds-lagency.yml  webrtc-builds.yml
examples/local_video/: Cargo.toml
examples/local_video/src/: main.rs
examples/local_video_webrtc/: Cargo.toml
examples/local_video_webrtc/src/: camera_permission.rs
examples/rtsp_h264_passthrough/: Cargo.toml  README.md
examples/rtsp_h264_passthrough/src/: main.rs
imgproc/: CHANGELOG.md
libwebrtc/: CHANGELOG.md  Cargo.toml
libwebrtc/src/: lib.rs  prelude.rs  video_capturer.rs  video_source.rs
libwebrtc/src/native/: mod.rs  passthrough_video_source.rs  video_capturer.rs
livekit/: CHANGELOG.md
livekit-api/: CHANGELOG.md
livekit-ffi/: CHANGELOG.md
livekit-ffi-node-bindings/: Cargo.toml
livekit/src/room/participant/: local_participant.rs
livekit/src/room/track/: local_video_track.rs
webrtc-sys/: CHANGELOG.md  build.rs
webrtc-sys/include/livekit/: passthrough_video_encoder.h  video_capturer.h
webrtc-sys/src/: lib.rs  passthrough_video_encoder.cpp  passthrough_video_encoder.rs  video_capturer.cpp  video_capturer.rs  video_capturer_macos.mm  video_encoder_factory.cpp
yuv-sys/: CHANGELOG.md
