[package]
name = "local_video"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
livekit = { workspace = true, features = ["rustls-tls-native-roots"] }
livekit-api = { workspace = true, features = ["rustls-tls-native-roots"] }
libwebrtc = { workspace = true }
log = "0.4"
cpal = "0.15"
anyhow = "1.0"
futures-util = "0.3"
